txt-output/5.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: True should be something of Int, "hi" should be something of Int
v4 = let x = 3 + True in 4 + "hi"                    

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\5.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\5.hs:6:13:
    No instance for (Num Bool)
      arising from a use of `+' at ill-typed\5.hs:6:13-20
    Possible fix: add an instance declaration for (Num Bool)
    In the expression: 3 + True
    In the definition of `x': x = 3 + True
    In the expression: let x = 3 + True in 4 + "hi"

ill-typed\5.hs:6:25:
    No instance for (Num [Char])
      arising from the literal `4' at ill-typed\5.hs:6:25
    Possible fix: add an instance declaration for (Num [Char])
    In the first argument of `(+)', namely `4'
    In the expression: 4 + "hi"
    In the expression: let x = 3 + True in 4 + "hi"


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\5.hs, ill-typed\5.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\5.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\5.hs:6:16: error:
    * No instance for (Num Bool) arising from a use of `+'
    * In the expression: 3 + True
      In an equation for `x': x = 3 + True
      In the expression: let x = 3 + True in 4 + "hi"
  |
6 | v4 = let x = 3 + True in 4 + "hi"                    
  |                ^

ill-typed\5.hs:6:28: error:
    * No instance for (Num String) arising from a use of `+'
    * In the expression: 4 + "hi"
      In the expression: let x = 3 + True in 4 + "hi"
      In an equation for `v4': v4 = let x = 3 + True in 4 + "hi"
  |
6 | v4 = let x = 3 + True in 4 + "hi"                    
  |                            ^
